--- a/icons/GPU Passthrough Manager.desktop
+++ b/icons/GPU Passthrough Manager.desktop
@@ -3,8 +3,8 @@ Version=1.0
 Type=Application
 Name=GPU Passthrough Manager
 Comment=GPU passthrough made easy.
-Exec=sudo gpu-passthrough-manager
+Exec=gpu-passthrough-manager
 Icon=/usr/share/gpu-passthrough-manager/icons/GPUPM.png
 Path=
-Terminal=true
+Terminal=false
 StartupNotify=false
