Update GPU Passthrough Manager.desktop

--- a/icons/GPU Passthrough Manager.desktop
+++ b/icons/GPU Passthrough Manager.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=GPU Passthrough Manager
 Comment=GPU passthrough made easy.
-Exec=gpu-passthrough-manager
+Exec=pkexec gpu-passthrough-manager
 Icon=/usr/share/gpu-passthrough-manager/icons/GPUPM.png
 Path=
 Terminal=false
